	 against libgcrypt (except rzxdump) or zlib.
20031015 Makefile.am: no need to explicitly link against glib either.
20031016 Makefile.am, configure.in: no longer need to find path to glib.
20031020 listbasic.c, snapconv.c: use libspectrum_identify_file_with_class
	 where appropriate.
20031203 Some --enable-warnings cleanups.
20031211 Initial import of Tomaz Kac's z802tzx utility (as snap2tzx).
20031212 Makefile.am, snap2tzx.c: libspectrum-ify the snap reading part
	 of snap2tzx.
20031212 snap2tzx.c: C89 and coding style fixups.
20031216 snap2tzx.c: finish libspectrumification of snap2tzx.
20031216 ChangeLog: bring up to date.
20031218 snap2tzx.c: slow 6000 bps loader down slightly so it works with
	 (more) emulators; this is the only signficant change made between
	 z802tzx 1.0 and z802tzx 1.1.
20031218 COPYING: add a copy of the GPL to the distribution.
20040117 rzxtool.c, scl2trd.c: stop recognised options producing two
	 error messages.
20040117 TAG: fuse-utils_0_6_2-trunk
	 BRANCH: fuse-utils_0_6_2-branch
20040117 TAG: fuse-utils_0_6_2pre1 (fuse-utils_0_6_2-branch).
20040204 man/: updates (fuse-utils_0_6_2-branch).
20040205 configure.in: bump version number to 0.6.2pre2
	 (fuse-utils_0_6_2-branch).
20040205 TAG: fuse-utils_0_6_2pre2 (fuse-utils_0_6_2-branch).
20040206 README, man/: final doc updates for the 0.6.2 release.
	 (fuse-utils_0_6_2-branch).
20040207 keys.c: change description of the Fuse key
	 (fuse-utils_0_6_2-branch).
20040211 configure.in: bump version number to 0.6.2
	 (fuse-utils_0_6_2-branch).
20040211 tzxlist.c: fix double-free bug on failed tape open
	 (fuse-utils_0_6_2-branch).
20040212 TAG: fuse-utils_0_6_2 (fuse-utils_0_6_2-branch).
20040223 Merge changes from fuse-utils_0_6_2 to HEAD.
20040223 TAG: fuse-utils_0_6_2-merge-1
20040616 acconfig.h,configure.in: remove use of acconfig.h.
20040616 .cvsignore,createhdf.c,Makefile.am: add createhdf utility for
	 creating empty .hdf files.