@@ -47,6 +47,13 @@ http://fuse-emulator.sourceforge.net/fuse.php
 
 Please send any bug reports, comments, etc to me.
 
+Compiling from CVS
+------------------
+
+If you're using version of libspectrum from CVS rather than one of the
+released tarballs, you'll need to run `autogen.sh' before running
+'configure' for the first time.
+
 Philip Kendall <pak21-fuse@srcf.ucam.org>
 11 February 2004
 
