@@ -98,6 +98,10 @@ do this bit.
 
 Once you've got Fuse configured and built, read the man page :-)
 
+Note that if you're using version of Fuse from CVS rather than one of
+the released tarballs, you'll need to run `autogen.sh' before running
+'configure' for the first time.
+
 Building the OS X version of Fuse
 ---------------------------------
 
